--- a/movies-explorer-frontend/src/index.css
+++ b/movies-explorer-frontend/src/index.css
@@ -1,13 +1,32 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* * {
+  outline: 1px red solid;
+} */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url('./vendor/normalize.css');
+@import url('./vendor/fonts/inter.css');
+
+@import url('./components/App/App.css');
+@import url('./components/Main/Main.css');
+@import url('./components/Header/Header.css');
+@import url('./components/Navigation/Navigation.css');
+@import url('./components/Promo/Promo.css');
+@import url('./components/NavTab/NavTab.css');
+@import url('./components/AboutProject/AboutProject.css');
+@import url('./components/Techs/Techs.css');
+@import url('./components/AboutMe/AboutMe.css');
+@import url('./components/Portfolio/Portfolio.css');
+@import url('./components/Footer/Footer.css');
+@import url('./components/Movies/Movies.css');
+@import url('./components/SavedMovies/SavedMovies.css');
+@import url('./components/SearchForm/SearchForm.css');
+@import url('./components/FilterCheckbox/FilterCheckbox.css');
+@import url('./components/MoviesCard/MoviesCard.css');
+@import url('./components/MoviesCardList/MoviesCardList.css');
+@import url('./components/MoreButton/MoreButton.css');
+@import url('./components/BurgerMenu/BurgerMenu.css');
+@import url('./components/Profile/Profile.css');
+@import url('./components/Register/Register.css');
+@import url('./components/InfoForm/InfoForm.css');
+@import url('./components/Login/Login.css');
+@import url('./components/NotFound/NotFound.css');
+@import url('./components/PopupError/PopupError.css');
