реализовал всю логику фронтенда. Перед первым ревью

--- a/movies-explorer-frontend/src/components/BurgerMenu/BurgerMenu.css
+++ b/movies-explorer-frontend/src/components/BurgerMenu/BurgerMenu.css
@@ -68,6 +68,10 @@
   font-weight: 500;
 }
 
+.burger-menu__link_active {
+  font-weight: 900;
+}
+
 .burger-menu__link::before {
   content: '';
   position: absolute;
