--- a/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
+++ b/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
@@ -60,15 +60,15 @@
 }
 
 .movies-card__delete {
-  margin: 0 auto;
+  margin: 8px auto 0 auto;
   grid-area: button;
-  width: 30px;
-  height: 30px;
+  width: 14px;
+  height: 12px;
   padding: 0;
   background-color: transparent;
   border: none;
-  background-image: url('../../images/delete-button.png');
-  background-size: contain;
+  background-image: url('../../images/delete.svg');
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0;
