--- a/movies-explorer-frontend/src/components/Navigation/Navigation.css
+++ b/movies-explorer-frontend/src/components/Navigation/Navigation.css
@@ -23,12 +23,8 @@
   cursor: pointer;
 }
 
-.navigation__link_type_bold {
+.navigation__link_active {
   font-weight: 500;
-}
-
-.navigation__link_type_normal {
-  font-weight: 400;
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
