--- a/movies-explorer-frontend/src/components/PopupError/PopupError.css
+++ b/movies-explorer-frontend/src/components/PopupError/PopupError.css
@@ -24,7 +24,7 @@
   min-width: 430px;
   min-height: 330px;
   border-radius: 10px;
-  background-color: rgba(232, 232, 232, 1);
+  background-color: rgba(255, 255, 255, 1);
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, .15);
   position: relative;
   display: flex;
@@ -60,4 +60,17 @@
 .popup-error__close-button:hover {
   opacity: .5;
   cursor: pointer;
+}
+
+@media screen and (max-width: 320px) {
+  .popup-error__container {
+    width: calc(100% - 20px);
+    min-width: 270px;
+    min-height: 280px;
+  }
+
+  .popup-error__close-button {
+    top: -50px;
+    right: -5px;
+  }
 }
