--- a/movies-explorer-frontend/src/components/Profile/Profile.css
+++ b/movies-explorer-frontend/src/components/Profile/Profile.css
@@ -23,7 +23,11 @@
 
 .profile__form {
   width: 410px;
+  min-height: 299px;
   margin: 123px auto 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .profile__info {
@@ -33,20 +37,22 @@
 }
 
 .profile__input-wrapper {
+  margin: 3px 0 0 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  padding: 0 0 16px 0;
+  padding: 0 0 12px 0;
   border-bottom: 1px solid rgba(232, 232, 232, 1);
 }
 
-.profile__input-wrapper:last-child {
+.profile__input-wrapper:last-of-type {
   border: none;
-  margin: 17px 0 0 0;
+  margin: 3px 0 0 0;
 }
 
 .profile__input-tag {
+  padding: 10px 0 0 0;
   font-size: 11px;
   line-height: 14px;
   font-weight: 500;
@@ -55,32 +61,77 @@
 .profile__input {
   text-align: right;
   max-width: 200px;
-  padding: 0;
+  padding: 10px 3px 0 0;
   border: 0;
+  border-radius: 4px;
   outline: none;
   font-size: 11px;
   line-height: 14px;
   font-weight: 500;
 }
 
+.profile__input:focus {
+  outline: .5px solid #008c96;
+}
+
+.profile__input_type_error {
+  outline:rgba(255, 64, 98, 1);
+}
+
+.profile__error-element {
+  display: none;
+  margin: 10px 0 15px 0;
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 400;
+  color: rgba(255, 64, 98, 1);
+}
+
+.profile__error-element_visible {
+  display: block;
+}
+
 .profile__save-button {
   display: block;
   border: none;
   background-color: transparent;
-  margin: 204px auto 0 auto;
+  margin: auto auto 0 auto;
   box-sizing: border-box;
   padding: 0;
   font-size: 13px;
   line-height: 16px;
-  font-weight: 400;
   color: #000;
+  font-weight: 400;
   text-align: center;
   transition: opacity .2s ease-in-out;
+}
+
+.profile__error-message {
+  display: none;
+  margin: 0 0 15px 0;
+  font-size: 13px;
+  line-height: 16px;
+  text-align: center;
+  font-weight: 400;
+  color:rgba(255, 64, 98, 1);
+}
+
+.profile__error-message_active {
+  display: block;
+}
+
+.profile__save-button_disabled {
+  color: #C2C2C2;
 }
 
 .profile__save-button:hover {
   opacity: 0.5;
   cursor: pointer;
+}
+
+.profile__save-button_disabled:hover {
+  opacity: 1;
+  cursor: default;
 }
 
 .profile__logout-button {
